nenolod     2005/12/13 16:24:31 UTC	(20051213-4083)
  Log:
  use a struct -- hook_channel_req_t. :)
  

  Changes:	Modified:
  +4 -1		trunk/modules/chanserv/info.c (File Modified) 


nenolod     2005/12/13 16:20:26 UTC	(20051213-4081)
  Log:
  Add hook for modules to attach to /cs info... channel_info.
  Not documented in HOOKS yet.
  

  Changes:	Modified:
  +2 -0		trunk/modules/chanserv/info.c (File Modified) 


jilles      2005/12/12 00:11:48 UTC	(20051212-4079)
  Log:
  Add /cs forcexop to reset access levels to xOP values.
  Useful if CA_?OP are changed.
  

  Changes:	Modified:
  +16 -0	trunk/help/cservice/forcexop (File Added) 
  +5 -0		trunk/help/cservice/xop (File Modified) 
  +76 -0	trunk/modules/chanserv/xop.c (File Modified) 


jilles      2005/12/10 01:22:24 UTC	(20051210-4063)
  Log:
  Move protect from +r to +s as +r is commonly granted
  to normal ops.
  

  Changes:	Modified:
  +1 -1		trunk/src/function.c (File Modified) 


jilles      2005/12/10 01:18:08 UTC	(20051210-4061)
  Log:
  Enable protect and halfops in ultimate3. Untested.
  

  Changes:	Modified:
  +2 -2		trunk/protocol/ultimate3.c (File Modified) 


jilles      2005/12/10 00:29:54 UTC	(20051210-4059)
  Log:
  No need to check if a protocol module is loaded another time.
  (The issue is that config_ready hooks often really need
  information defined in the protocol module.)
  

  Changes:	Modified:
  +0 -6		trunk/src/atheme.c (File Modified) 


jilles      2005/12/10 00:17:42 UTC	(20051210-4057)
  Log:
  Log a clear error message and exit cleanly if no protocol
  module was loaded in the config file.
  
  Tracker #76
  

  Changes:	Modified:
  +6 -0		trunk/src/conf.c (File Modified) 


jilles      2005/12/09 17:42:11 UTC	(20051209-4055)
  Log:
  Fix a compiler warning.
  

  Changes:	Modified:
  +3 -1		trunk/protocol/inspircd.c (File Modified) 


jilles      2005/12/09 17:19:42 UTC	(20051209-4053)
  Log:
  Add IDLE command to allow remote whois on services.