@@ -1,3 +1,12 @@
+nenolod     2005/12/13 16:50:37 UTC	(20051213-4085)
+  Log:
+  oops
+  
+
+  Changes:	Modified:
+  +5 -0		trunk/include/atheme.h (File Modified) 
+
+
 nenolod     2005/12/13 16:24:31 UTC	(20051213-4083)
   Log:
   use a struct -- hook_channel_req_t. :)
